<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:setting="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background" android:fitsSystemWindows="true"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <com.smartisanos.home.widget.sys.Title android:id="@id/view_title"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_alignParentTop="true" setting:title_titlex="@string/search_vertical_gestures_title" />
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_below="@id/view_title" android:overScrollMode="always">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_search_page_enabled"
                android:layout_marginTop="@dimen/settings_item_top_bottom_margin"
                setting:setting_item_switch_title="@string/search_page_gesture_title"
                style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:id="@+id/item_id_search_page_tips"
                android:layout_marginTop="@dimen/settings_item_title_margin_top"
                android:text="@string/search_page_gesture_tips_normal" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_search_t9_enabled"
                android:layout_marginTop="@dimen/settings_item_top_bottom_margin"
                setting:setting_item_switch_title="@string/search_t9_enabled_title"
                style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView
                android:layout_marginTop="@dimen/settings_item_title_margin_top"
                android:text="@string/search_t9_enabled_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_search_common_apps_enabled"
                android:layout_marginTop="@dimen/settings_item_top_bottom_margin"
                setting:setting_item_switch_title="@string/search_common_apps_enabled_title"
                style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top"
                android:text="@string/search_common_apps_enabled_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_search_contacts_enabled"
                android:layout_marginTop="@dimen/settings_item_top_bottom_margin"
                setting:setting_item_switch_title="@string/search_contacts_enabled_title"
                style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top"
                android:text="@string/search_contacts_enabled_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_swipe_down_system_panels"
                android:layout_marginTop="@dimen/settings_item_top_bottom_margin"
                setting:setting_item_switch_title="@string/swipe_down_system_panels_title"
                style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:id="@+id/item_id_swipe_down_system_panels_tips"
                android:layout_marginTop="@dimen/settings_item_title_margin_top"
                android:text="@string/swipe_down_system_panels_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_vertical_gesture_direction_reversed"
                android:layout_marginTop="@dimen/settings_item_top_bottom_margin"
                setting:setting_item_switch_title="@string/vertical_gesture_direction_reversed_title"
                style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:id="@+id/item_id_vertical_gesture_direction_reversed_tips"
                android:layout_marginTop="@dimen/settings_item_title_margin_top"
                android:text="@string/vertical_gesture_direction_normal_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_dock_slide_reverse"
                android:layout_marginTop="@dimen/settings_item_top_bottom_margin"
                setting:setting_item_switch_title="@string/dock_slide_reverse_title"
                style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView
                android:layout_marginTop="@dimen/settings_item_title_margin_top"
                android:text="@string/dock_slide_reverse_tips" style="@style/SettingItemTipsStyle" />
            <include layout="@layout/item_bottom_shadow_layout" />
        </LinearLayout>
    </ScrollView>
    <include android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@id/view_title" layout="@layout/title_bar_shadow" />
</RelativeLayout>
